Removed unused fields